Modal, content shifting fix

--- a/ModuleManager.Web/Content/custom.css
+++ b/ModuleManager.Web/Content/custom.css
@@ -290,3 +290,9 @@ textarea {
 .DefaultColor {
     background: #FF004B;
 }
+
+body.modal-open {
+    overflow-y: scroll;
+    padding-right: 17px;
+    margin-right: -17px;
+}
